Adding links to other resources

--- a/algorithms.html
+++ b/algorithms.html
@@ -93,6 +93,14 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <h4>Links to other resources about search algorithms</h4>
+        <ul>
+            <li><a href="https://moz.com/learn/seo/what-is-seo" target="_blank">Moz – SEO and Search Algorithms</a></li>
+            <li><a href="https://www.geeksforgeeks.org/searching-algorithms/" target="_blank">Geeks for Geeks - Searching algorithms</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Search_algorithm" target="_blank">Wikipedia - Search algorithms</a></li>
+        </ul>
+    </div>
 </section>
 
 
