--- a/contextual-search.html
+++ b/contextual-search.html
@@ -109,6 +109,15 @@
             </p>
         </div>
     </div>
+
+    <div class="row">
+        <h4>Links to other resources about contextual search</h4>
+        <ul>
+            <li><a href="https://www.servicenow.com/docs/bundle/yokohama-platform-administration/page/administer/contextual-search/concept/c_ContextualSearch.html" target="_blank">ServiceNow – Contextual Search Overview</a></li>
+            <li><a href="https://blog.zoovu.com/optimize-contextual-search/" target="_blank">Zoovu – Optimizing Contextual Search</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Contextual_searching" target="_blank">Wikipedia – Contextual Searching</a></li>
+        </ul>
+    </div>
 </section>
 
 <footer class="text-center">
