--- a/personalized-results.html
+++ b/personalized-results.html
@@ -138,6 +138,15 @@
             </p>
         </div>
     </div>
+
+    <div class="row">
+        <h4>Links to other resources about personalized results</h4>
+        <ul>
+            <li><a href="https://williamsmedia.co/google-search-personalization" target="_blank">Williams Media – Google Search Personalization</a></li>
+            <li><a href="https://thegray.company/blog/personalization-seo" target="_blank">The Gray Company – SEO and Personalization</a></li>
+            <li><a href="https://www.perplesity.ai/personalization-and-user-experience-how-ai-tailors-search-results-to-individual-users" target="_blank">Perplesity – Personalized Search Results Explained</a></li>
+        </ul>
+    </div>
 </section>
 
 <footer class="text-center">
