--- a/search-engines.html
+++ b/search-engines.html
@@ -121,6 +121,18 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <h4>Links to other resources about search engines</h4>
+        <ul>
+            <li><a href="https://moz.com/beginners-guide-to-seo/how-search-engines-operate" target="_blank">Moz – How Search Engines Operate</a></li>
+            <li><a href="https://developers.google.com/search/docs/fundamentals/how-search-works" target="_blank">Google Developers – How Search Works</a></li>
+            <li><a href="https://www.seo.com/basics/how-search-engines-work/" target="_blank">SEO.com – How Search Engines Work</a></li>
+            <li><a href="https://www.stanventures.com/blog/crawling-indexing-ranking/" target="_blank">Stan Ventures – Crawling, Indexing, and Ranking</a></li>
+            <li><a href="https://www.geeksforgeeks.org/how-the-google-search-works-crawling-indexing-ranking-and-serving/" target="_blank">GeeksforGeeks – How Google Search Works</a></li>
+            <li><a href="https://www.wix.com/seo/learn/resource/intro-to-crawling-indexing-ranking-for-seo" target="_blank">Wix – Intro to Crawling, Indexing & Ranking for SEO</a></li>
+        </ul>
+    </div>
 </section>
 
 
