--- a/voice-search.html
+++ b/voice-search.html
@@ -98,6 +98,15 @@
             <p>Despite its growth, voice search still faces challenges such as accents, background noise, privacy concerns, and language diversity. Furthermore, it often returns a single spoken result, which limits exposure for other relevant sources.</p>
         </div>
     </div>
+
+    <div class="row">
+        <h4>Links to other resources about voice search</h4>
+        <ul>
+            <li><a href="https://www.searchenginejournal.com/voice-search/457718/" target="_blank">Search Engine Journal – Voice Search SEO</a></li>
+            <li><a href="https://www.techtarget.com/searchcustomerexperience/definition/voice-recognition-speaker-recognition" target="_blank">TechTarget – What is Voice Recognition?</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Voice_search" target="_blank">Wikipedia – Voice Search</a></li>
+        </ul>
+    </div>
 </section>
 
 <footer class="text-center">
