--- a/contextual-search.html
+++ b/contextual-search.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internet Search Technologies</title>
+    <title>Contextual Search: How It Works | Internet Search Technologies</title>
+    <meta name="description" content="How contextual search works - understanding user intent, location awareness, time sensitivity and search history to deliver personalized results">
+    <meta name="keywords" content="contextual search, internet search technologies, internet contextual search, search">
+    <link rel="canonical" href="https://elwisxd.github.io/internet-search-technologies/contextual-search.html" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .hero-section {
@@ -52,7 +55,8 @@
 
 <section class="hero-section">
     <div class="container text-left">
-        <h1 class="display-4">Contextual search</h1>
+        <h1 class="display-4">What is contextual search? How it works?</h1>
+        <p class="lead">How search engines understand context to deliver better results</p>
     </div>
 </section>
 
@@ -63,12 +67,12 @@
 
     <div class="row align-items-center mb-4">
         <div class="col-md-6">
-            <h4>How It Works</h4>
+            <h2>How It Works</h2>
             <p>Search engines analyze the context of a query to refine the results. For example, the query “best coffee” on a smartphone in the morning might show nearby cafés with good reviews, while the same query at home in the evening may return online coffee brands or recipes.</p>
             <p>This dynamic adaptation enhances relevance and helps deliver personalized content to users in real time.</p>
         </div>
         <div class="col-md-6">
-            <img src="media/contextual-search.jpg" class="img-fluid mx-auto d-block" style="max-width: 300px;" alt="">
+            <img src="media/contextual-search.jpg" class="img-fluid mx-auto d-block" style="max-width: 300px;" alt="How contextual search works - diagram showing location, time and personalization factors" >
         </div>
     </div>
 
@@ -103,10 +107,92 @@
 
     <div class="row mt-4">
         <div class="col-md-12 text-center">
-            <h4>Why It Matters</h4>
+            <h2>Why It Matters</h2>
             <p>
                 Contextual search creates a more natural and efficient user experience. It saves time, reduces ambiguity, and enables smarter digital assistants. However, it also raises questions about privacy and data usage, requiring transparency and user control over personalized data.
             </p>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12 text-center">
+            <h2>Contextual Search vs. Traditional Search</h2>
+            <p>Unlike traditional search, which focuses on keywords, <strong>contextual search</strong> considers:</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Traditional Search</h4>
+                    <ul>
+                        <li>Exact keyword matches</li>
+                        <li>Basic ranking factors (backlinks, content length)</li>
+                        <li>One-size-fits-all results</li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <h4>Contextual Search</h4>
+                    <ul>
+                        <li>User intent analysis</li>
+                        <li>Behavioral signals (clicks, dwell time)</li>
+                        <li>Personalized results based on history</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12 text-center">
+            <img src="/media/contextual-search.png" alt="Contextual search technology diagram showing how location, time and user history personalize search results"
+                 title="How Contextual Search Works">
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12 text-center">
+            <h2>The Evolution of Contextual Search</h2>
+            <p>Contextual search has evolved from simple keyword matching to advanced AI-driven systems that analyze multiple signals to understand user intent. Early search engines relied on exact keyword matches, but modern algorithms like Google's RankBrain use machine learning to interpret context, synonyms, and even ambiguous queries.</p>
+            <p>Today, contextual search powers features like:</p>
+            <ul>
+                <li>Voice search assistants (Google Assistant, Siri, Alexa)</li>
+                <li>Personalized recommendations in e-commerce</li>
+                <li>Localized search results ("coffee shops near me")</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-12 text-center">
+            <h2>How Businesses Can Optimize for Contextual Search</h2>
+            <p>To rank higher in contextual search results, consider these strategies:</p>
+
+            <h3>3.1. Create Topic Clusters</h3>
+            <p>Instead of targeting isolated keywords, build <strong>topic clusters</strong> with:</p>
+            <ul>
+                <li>A pillar page (e.g., "Ultimate Guide to Contextual Search")</li>
+                <li>Supporting articles (e.g., "How Location Data Affects Search Results")</li>
+            </ul>
+
+            <h3>3.2. Optimize for Semantic Search</h3>
+            <p>Use related terms and natural language:</p>
+            <ul>
+                <li>Synonyms: "nearby," "close to me," "in my area"</li>
+                <li>Questions: "How does contextual search work?"</li>
+            </ul>
+
+            <h3>3.3. Leverage Structured Data</h3>
+            <p>Schema markup helps search engines understand context:</p>
+            <pre class="bg-light p-3 border rounded text-start">
+            {
+                "@type": "FAQPage",
+                "mainEntity": [{
+                    "@type": "Question",
+                    "name": "What is contextual search?",
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Contextual search..."
+                    }
+                }]
+            }
+            </pre>
         </div>
     </div>
 
