--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
     <div class="row">
         <div class="col-lg-8">
             <h2>What Are Internet Search Technologies?</h2>
-            <p>Internet search technologies are methods and systems that allow users to find information on the World Wide Web. These technologies include search engine principles, indexing algorithms, result ranking, and much more.</p>
-
+            <p>Internet search technologies are methods and systems that allow users to find information on the World Wide Web. These technologies include search engine principles, indexing algorithms, result ranking, and much more, including <a href="contextual-search.html">contextual search</a></p>
             <h3 class="mt-4">Fundamentals of Web Search</h3>
             <p>Internet search occurs in several stages:</p>
             <ul>
@@ -155,16 +154,6 @@
 
 <footer class="text-center">
     <div class="container">
-        <nav aria-label="Links to all sections">
-            <ul style="list-style: none; padding: 0;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="search-engines.html">Search Engines</a></li>
-                <li><a href="algorithms.html">Algorithms</a></li>
-                <li><a href="voice-search.html">Voice Search</a></li>
-                <li><a href="contextual-search.html">Contextual Search</a></li>
-                <li><a href="personalized-results.html">Personalized Results</a></li>
-            </ul>
-        </nav>
         <p>&copy; Course Internet Search Technologies 2025</p>
     </div>
 </footer>
