--- a/voice-search.html
+++ b/voice-search.html
@@ -81,7 +81,14 @@
     <div class="row mt-5">
         <div class="col-md-12 text-center">
             <h4>SEO and Content Strategy for Voice</h4>
-            <p>To optimize for voice search, websites must focus on long-tail keywords, structured data, and content that directly answers questions. Frequently Asked Questions (FAQs), featured snippets, and mobile-friendly design significantly improve voice visibility.</p>
+            <p>To optimize for voice search, websites must focus on:</p>
+            <ul class="list-unstyled">
+                <li>Long-tail keywords and natural language queries</li>
+                <li>Structured data markup</li>
+                <li>Direct question-answer content formats</li>
+                <li>Integration with <a href="contextual-search.html" class="text-decoration-underline">contextual search</a> principles</li>
+            </ul>
+            Voice assistants like Siri and Alexa use contextual signals - including location, device type and search history - to deliver personalized responses, making contextual optimization essential for voice search success.
         </div>
     </div>
 
@@ -104,16 +111,6 @@
 
 <footer class="text-center">
     <div class="container">
-        <nav aria-label="Links to all sections">
-            <ul style="list-style: none; padding: 0;">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="search-engines.html">Search Engines</a></li>
-                <li><a href="algorithms.html">Algorithms</a></li>
-                <li><a href="voice-search.html">Voice Search</a></li>
-                <li><a href="contextual-search.html">Contextual Search</a></li>
-                <li><a href="personalized-results.html">Personalized Results</a></li>
-            </ul>
-        </nav>
         <p>&copy; Course Internet Search Technologies 2025</p>
     </div>
 </footer>
