Updated search-engines page and added 2 new with schema.org data

--- a/search-engines.html
+++ b/search-engines.html
@@ -25,6 +25,50 @@
             margin-top: 40px;
         }
     </style>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "ItemList",
+            "name": "Major Search Engines",
+            "itemListElement": [
+                {
+                    "@type": "Article",
+                    "position": 1,
+                    "name": "Google",
+                    "url": "https://example.com/search-engines.html#google",
+                    "description": "Google, launched in 1998, is the most widely used search engine in the world. Its ranking system is based on hundreds of factors including backlinks, content quality, and user experience."
+                },
+                {
+                    "@type": "Article",
+                    "position": 2,
+                    "name": "DuckDuckGo",
+                    "url": "https://example.com/search-engines.html#duckduckgo",
+                    "description": "DuckDuckGo is a privacy-focused search engine that doesn’t track users and uses a wide range of information sources."
+                },
+                {
+                    "@type": "Article",
+                    "position": 3,
+                    "name": "Bing",
+                    "url": "https://example.com/search-engines.html#bing",
+                    "description": "Microsoft’s Bing is known for its visual layout, AI integration, and competitive search results."
+                },
+                {
+                    "@type": "Article",
+                    "position": 4,
+                    "name": "Yahoo",
+                    "url": "https://example.com/search-engines.html#yahoo",
+                    "description": "Yahoo now uses Bing’s search technology and also offers services like Yahoo Mail and News."
+                },
+                {
+                    "@type": "Article",
+                    "position": 5,
+                    "name": "Yandex",
+                    "url": "https://example.com/search-engines.html#yandex",
+                    "description": "Yandex is a leading search engine in Russia, offering services similar to Google, including maps and AI-powered products."
+                }
+            ]
+        }
+    </script>
 </head>
 <body>
 
