Updating headers with new sections

--- a/voice-search.html
+++ b/voice-search.html
@@ -38,6 +38,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="algorithms.html">Algorithms</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="seo-guide.html">SEO Guide</a>
+                </li>
             </ul>
         </div>
     </div>
