--- a/faq_page.html
+++ b/faq_page.html
@@ -98,10 +98,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="search-engines.html">Search Engines</a></li>
-                <li class="nav-item"><a class="nav-link" href="algorithms.html">Algorithms</a></li>
-                <li class="nav-item"><a class="nav-link active" href="faq.html">FAQ</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="search-engines.html">Search Engines</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="algorithms.html">Algorithms</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="seo-guide.html">SEO Guide</a>
+                </li>
             </ul>
         </div>
     </div>
