--- a/search-engines.html
+++ b/search-engines.html
@@ -35,35 +35,35 @@
                     "@type": "Article",
                     "position": 1,
                     "name": "Google",
-                    "url": "https://example.com/search-engines.html#google",
+                    "url": "https://elwisxd.github.io/internet-search-technologies/search-engines.html#google",
                     "description": "Google, launched in 1998, is the most widely used search engine in the world. Its ranking system is based on hundreds of factors including backlinks, content quality, and user experience."
                 },
                 {
                     "@type": "Article",
                     "position": 2,
                     "name": "DuckDuckGo",
-                    "url": "https://example.com/search-engines.html#duckduckgo",
+                    "url": "https://elwisxd.github.io/internet-search-technologies/search-engines.html#duckduckgo",
                     "description": "DuckDuckGo is a privacy-focused search engine that doesn’t track users and uses a wide range of information sources."
                 },
                 {
                     "@type": "Article",
                     "position": 3,
                     "name": "Bing",
-                    "url": "https://example.com/search-engines.html#bing",
+                    "url": "https://elwisxd.github.io/internet-search-technologies/search-engines.html#bing",
                     "description": "Microsoft’s Bing is known for its visual layout, AI integration, and competitive search results."
                 },
                 {
                     "@type": "Article",
                     "position": 4,
                     "name": "Yahoo",
-                    "url": "https://example.com/search-engines.html#yahoo",
+                    "url": "https://elwisxd.github.io/internet-search-technologies/search-engines.html#yahoo",
                     "description": "Yahoo now uses Bing’s search technology and also offers services like Yahoo Mail and News."
                 },
                 {
                     "@type": "Article",
                     "position": 5,
                     "name": "Yandex",
-                    "url": "https://example.com/search-engines.html#yandex",
+                    "url": "https://elwisxd.github.io/internet-search-technologies/search-engines.html#yandex",
                     "description": "Yandex is a leading search engine in Russia, offering services similar to Google, including maps and AI-powered products."
                 }
             ]
@@ -109,7 +109,7 @@
 <section class="container mt-5">
     <h2 class="mb-4 text-center">Major Search Engines</h2>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" id="google">
             <div class="card tech-card">
                 <img src="media/google.png" class="card-img-top  w-50 mx-auto d-block" alt="Google logo">
                 <div class="card-body">
@@ -121,7 +121,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="duckduckgo">
             <div class="card tech-card">
                 <img src="media/duckduckgo.png" class="card-img-top  w-50 mx-auto d-block" alt="DuckDuckGo logo">
                 <div class="card-body">
@@ -133,7 +133,7 @@
             </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4" id="bing">
             <div class="card tech-card">
                 <img src="media/bing.png" class="card-img-top w-50 mx-auto d-block" alt="Bing logo">
                 <div class="card-body">
@@ -146,7 +146,7 @@
         </div>
     </div>
 
-    <div class="row mt-4">
+    <div class="row mt-4" id="yahoo">
         <div class="col-md-6">
             <div class="card tech-card">
                 <img src="media/yahoo.png" class="card-img-top w-50 mx-auto d-block" alt="Yahoo logo">
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-6" id="yandex">
             <div class="card tech-card">
                 <img src="media/yandex.png" class="card-img-top w-50 mx-auto d-block" alt="Yandex logo">
                 <div class="card-body">
