--- a/seo-guide.html
+++ b/seo-guide.html
@@ -155,6 +155,8 @@
                 <li><strong>Don't over-optimize:</strong> Avoid keyword stuffing and manipulative practices. SEO is about providing real value to users.</li>
             </ul>
 
+            <p>Read about <a href="fact-check-meta-keywords.html">do meta keywords improve seo?</a></p>
+
             <p>By following the steps above and applying these ongoing principles, you'll build a strong SEO foundation that helps your content reach the right audience.</p>
         </div>
     </div>
