--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         <div class="col-lg-8">
             <h2>What Are Internet Search Technologies?</h2>
             <p>Internet search technologies are methods and systems that allow users to find information on the World Wide Web. These technologies include search engine principles, indexing algorithms, result ranking, and much more, including <a href="contextual-search.html">contextual search</a></p>
+            <h3 class="mt-4">Articles</h3>
+            <p>Check out our articles about internet search topics</p>
+            <ul>
+                <li><a href="fact-check-meta-keywords.html">Fact check about meta keywords</a></li>
+                <li><a href="is-semantic.html">is-semantic.net tool review</a></li>
+            </ul>
             <h3 class="mt-4">Fundamentals of Web Search</h3>
             <p>Internet search occurs in several stages:</p>
             <ul>
